# BaelUI

./: .gitignore  Cargo.toml
bael_macro/: Cargo.toml
bael_macro/src/: externed.rs  lib.rs  widget.rs
src/: lib.rs  main.rs
src/app/: app.rs  appdata.rs  data.rs  mod.rs
src/error/: mod.rs
src/render/: error.rs  mod.rs  shader.wgsl  texture.rs  vertex.rs  vulkan.rs  window_manager.rs
src/render/state/: functions.rs  mod.rs  new.rs
src/render/vulkan/: callback.rs  mod.rs  queue_family_indices.rs  vulkan.rs
src/test/render/: window.rs
src/ui/: mod.rs  widget.rs  widget_creator.rs
src/ui/container/: test.rs
