[package]
name = "bael"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
ash-window = "0.13.0"
cgmath = "0.18.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
shaderc = "0.10.1"
thiserror = "2.0.18"
vk-mem = "0.5.0"
vulkanalia = { version = "=0.25.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"

[lib]
crate-type=["rlib"]
