[package]
name = "bael"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cgmath = "0.18.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
thiserror = "2.0.18"
wgpu = "0.12"
winit = "0.27"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.25.10"
once_cell = "1.21"

[lib]
crate-type=["rlib"]
